--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/test.css">
-    <title>Le khus hoja</title>
+    <title>Happy Birthday💖</title>
 </head>
 <body>
 
